# djangomlapi

./: .gitignore  Dockerfile  pyproject.toml  start.sh  utils.py
web/app/: api.py  api_urls.py  test.bat  tests.py  urls.py  utils.py  views.py
web/app/npy/: features.npy  labels.npy  paths.npy  paths_webp.npy
web/app/templates/: base.html  home.html  result.html  select_patch.html
web/staticfiles/: style.css
web/web/: dev_urls.py  prod_urls.py  settings.py
